# voca

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: test-tag-push.json
.github/workflows/: ci.yml  release.yml
models/: README.md
scripts/: download_model.ps1  download_model.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autolaunch.rs  config.rs  downloader.rs  history.rs  lib.rs  main.rs  pipeline.rs
src-tauri/src/audio/: mod.rs  ring_buffer.rs  vad.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/inject/: mod.rs
src-tauri/src/orb/: mod.rs
src-tauri/src/stt/: mod.rs  postprocess.rs
src/components/: History.css  History.tsx  Orb.css  Orb.tsx  Settings.css  Settings.tsx
src/hooks/: useOrbState.ts
