[package]
name    = "voca"
version = "0.1.0"
edition = "2024"
description = "VOCA — Voice to Cursor, Always. A local-first floating dictation orb."
authors = ["Asman Mirza", "B3M Labs"]
license = "MIT"

# Required: produces a cdylib (Tauri loads this) and a rlib for tests
[lib]
name       = "voca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.tauri]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri ──────────────────────────────────────────────────────────────────
tauri              = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"

# ── Serialization ──────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async runtime ──────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Config ─────────────────────────────────────────────────────────────────
toml  = "1"
dirs  = "6"

# ── Logging ────────────────────────────────────────────────────────────────
log         = "0.4"
env_logger  = "0.11"

# ── Clipboard ──────────────────────────────────────────────────────────────
arboard = "3"

# ── Platform-specific (injection) ──────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics   = "0.25"

[profile.release]
panic   = "abort"   # Reduce binary size
codegen-units = 1   # Better optimization
lto     = true
strip   = true
